<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/share_file"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/arsenal"/>

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="You will be logged out"-->
            <!--android:gravity="center"-->
            <!--android:textSize="16sp"-->
            <!--android:layout_marginBottom="20dp"
            android:fontFamily="@font/arsenal"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_to"
            android:textSize="16sp"/>

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toAutoCompleteTextVIew"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:hint=""
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/arsenal"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_progress"
            android:textSize="16sp"
            android:id="@+id/shareProgressCheckBox"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_file"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_gravity="right"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:id="@+id/yes"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/arsenal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_gravity="right"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:id="@+id/no"
                android:layout_toLeftOf="@+id/yes"
                android:fontFamily="@font/arsenal"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>