<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.studyme.Files.EditFileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/action_bar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="80">

                <TextView
                    android:id="@+id/editFileTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="FileName"
                    android:textStyle="bold"
                    android:textSize="30sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/deleteOrShareLinearLayout"
                    android:layout_below="@+id/editFileTv">

                    <TextView
                        android:id="@+id/deleteFileTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Delete File"
                        android:textStyle="normal"
                        android:textSize="16sp"
                        android:layout_marginEnd="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/shareFileTV"
                        android:layout_alignRight="@+id/deleteFileTV"
                        android:text="@string/share_file"
                        android:textStyle="normal"
                        android:textSize="16sp"
                        android:layout_marginStart="15dp"/>

                </LinearLayout>

                <EditText
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editFileEt"
                    android:layout_below="@+id/deleteOrShareLinearLayout"
                    android:hint="\nWord: Definition\n"
                    android:gravity="top"
                    android:lineSpacingExtra="4dp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="vertical">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_to_storage"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/arsenal"
                    android:id="@+id/uploadCheckBox" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/make_public"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/arsenal"
                    android:id="@+id/makePublicCheckBox" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10">

                <Button
                    android:layout_width="@dimen/new_or_edit_file_butoon_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:text="Cancel"
                    android:textSize="20sp"
                    android:padding="@dimen/multiple_choice_button_padding"
                    android:id="@+id/editFileCancelBtn"
                    android:onClick="goBack"
                    android:background="@drawable/action_button_layout"/>

                <Button
                    android:layout_width="@dimen/new_or_edit_file_butoon_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:text="Save"
                    android:textSize="20sp"
                    android:padding="@dimen/multiple_choice_button_padding"
                    android:id="@+id/editFileSaveBtn"
                    android:onClick="saveFile"
                    android:background="@drawable/action_button_layout"/>

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>